[gd_scene load_steps=13 format=3 uid="uid://ba4lgmo5to8mb"]

[ext_resource type="Script" path="res://Scenes/Bullet.gd" id="1_83wpe"]
[ext_resource type="Texture2D" uid="uid://c0x06v0gpmfeh" path="res://Assets/FX/Death Explosion.png" id="1_xmluo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q1ilc"]
atlas = ExtResource("1_xmluo")
region = Rect2(0, 0, 50, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkyls"]
atlas = ExtResource("1_xmluo")
region = Rect2(50, 0, 50, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_04n04"]
atlas = ExtResource("1_xmluo")
region = Rect2(100, 0, 50, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8jdy"]
atlas = ExtResource("1_xmluo")
region = Rect2(150, 0, 50, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnie6"]
atlas = ExtResource("1_xmluo")
region = Rect2(200, 0, 50, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rnsh"]
atlas = ExtResource("1_xmluo")
region = Rect2(250, 0, 50, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_akmpb"]
atlas = ExtResource("1_xmluo")
region = Rect2(300, 0, 50, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfmi7"]
atlas = ExtResource("1_xmluo")
region = Rect2(350, 0, 50, 55)

[sub_resource type="SpriteFrames" id="SpriteFrames_x5tem"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1ilc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkyls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04n04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8jdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnie6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rnsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akmpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfmi7")
}],
"loop": false,
"name": &"Flash",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuk7v"]
size = Vector2(10, 17)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_83wpe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 5.96046e-08)
scale = Vector2(0.37, 0.413636)
sprite_frames = SubResource("SpriteFrames_x5tem")
animation = &"Flash"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vuk7v")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
